Updated readme file

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     ----------------------------------------------- -->
     <div class="vet-jobs">
       <div class="three columns header-col">
-        <h1><span>Veternary Jobs</span></h1>
+        <h1><span>Jobs</span></h1>
       </div>
       <div class="nine columns main-col">
         <div class="row item">
@@ -163,7 +163,7 @@
               well-being of our chickens and contributing to the success of
               Uzima Chicken farm.
             </p>
-            <a href="link-to-apply-page" class="button">APPLY NOW</a>
+            <a href="/pages/signup.html" class="button">APPLY NOW</a>
           </div>
         </div>
         <!-- item end -->
@@ -184,7 +184,7 @@
               measures. If you're passionate about fish health and want to make
               a difference,
             </p>
-            <a href="link-to-apply-page" class="button">APPLY NOW</a>
+            <a href="/pages/signup.html" class="button">APPLY NOW</a>
           </div>
         </div>
         <!-- item end -->
@@ -197,7 +197,6 @@
       ----------------------------------------------- -->
       <div class="sales-jobs">
         <div class="three columns header-col">
-          <h1><span>Sales</span></h1>
         </div>
 
         <div class="nine columns main-col">
@@ -216,7 +215,7 @@
               repairs, marketing farm products, and ensuring compliance with
               government regulations and safety standards.
               </p>
-              <a href="link-to-apply-page" class="button">APPLY NOW</a>
+              <a href="/pages/signup.html" class="button">APPLY NOW</a>
             </div>
           </div>
           <!-- item end -->
@@ -236,6 +235,7 @@
               ensuring customer satisfaction. Ideal candidates have sales
               experience and a passion for agriculture.
               </p>
+              <a href="/pages/signup.html" class="button">APPLY NOW</a>
             </div>
           </div>
           <!-- item end -->
